--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/white"/>
+        app:titleTextColor="@color/white" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -97,9 +97,9 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:padding="5dp"
-        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout">
@@ -115,9 +115,9 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/sky"
                 android:gravity="center"
-                android:text="Income" />
+                android:text="Income"
+                android:textColor="@color/sky" />
 
             <TextView
                 android:id="@+id/incomeLbl"
@@ -140,9 +140,9 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/sky"
                 android:gravity="center"
-                android:text="Expense" />
+                android:text="Expense"
+                android:textColor="@color/sky" />
 
             <TextView
                 android:id="@+id/expenseLbl"
@@ -165,18 +165,18 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/sky"
                 android:gravity="center"
-                android:text="Total" />
+                android:text="Total"
+                android:textColor="@color/sky" />
 
             <TextView
                 android:id="@+id/totalLbl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:layout_marginTop="3dp"
                 android:gravity="center"
-                android:text="0.0" />
+                android:text="0.0"
+                android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
 
@@ -212,22 +212,24 @@
         android:id="@+id/transactionsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/row_transaction"
         android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:listitem="@layout/row_transaction" />
 
     <ImageView
         android:id="@+id/emptyState"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:alpha="0.4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:alpha="0.8"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/transactionsList"
         app:layout_constraintStart_toStartOf="@+id/transactionsList"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:srcCompat="@drawable/transaction" />
+        app:layout_constraintVertical_bias="0.485"
+        app:srcCompat="@drawable/empty" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
